# docker-jenkins-flask

./: Dockerfile  README.md  app.py  model.pkl  model.py  model_test.py  pyproject.toml  request.py  test.csv
